test/lengthMismatch.slq
// args: --run

def main(){
	x:=[H(0:ğ”¹),H(1:ğ”¹)];
	y:=x coerce int[3]; // error
	return y;
}
